[package]
name = "cl_games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries.crates-io]
protocol = "sparse"

[dependencies]
colored = "2.0.0"
crossterm = "0.26.0"
rand = "0.8.4"
static_assertions = "1.1.0"
strum = "0.24.1"
strum_macros = "0.24"
once_cell = "1.8.0"
